book management ngrx store project changes

--- a/book-management-ngrx/src/app/app.component.html
+++ b/book-management-ngrx/src/app/app.component.html
@@ -1,4 +1,4 @@
-
 <div class="container">
-    <router-outlet></router-outlet>
+    <app-book-form></app-book-form>
+    <app-book-list></app-book-list>
 </div>
